<?xml version="1.0"?>
<package>
  <name>web_dyn_reconf</name>
  <version>0.0.0</version>
  <description>The web_dyn_reconf package</description>

  <author email="sam.pfeiffer@pal-robotics.com">Sammy Pfeiffer</author>
  <maintainer email="sam.pfeiffer@pal-robotics.com">Sammy Pfeiffer</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>


</package>